# Sunainscent-backend-fastapi

./: .env  .env.example  README.md  main.py  pyproject.toml
config/: database.py  settings.py
routes/: admin.py  auth.py  contact.py  orders.py  products.py
utils/: auth.py
validation/: contact_models.py  order_models.py  product_models.py  user_models.py
